--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@babel/node": "^7.10.5",
     "babel": "^6.23.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
